[project]
name = "ai-agent-knowledge-workspace"
version = "0.1.0"
description = "AI Agent RAG workspace built with FastAPI, Vue, PostgreSQL, Redis, LangChain, and LangGraph."
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.6",
    "uvicorn[standard]>=0.34.0",
    "pydantic-settings>=2.7.1",
    "python-multipart>=0.0.20",
    "sqlalchemy>=2.0.36",
    "alembic>=1.14.0",
    "psycopg[binary]>=3.2.3",
    "redis>=5.2.1",
    "langchain>=0.3.14",
    "langgraph>=0.2.60",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.4",
    "httpx>=0.28.1",
    "ruff>=0.8.6",
]

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]
exclude = ["data*", "frontend*", "docs*", "tests*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
